# backend

./: .env-dist  .gitignore  .pre-commit-config.yaml  Caddyfile  Makefile  README.md  STYLE_GUIDELINES.md  compose.override.yml  compose.prod.yml  compose.yml
src/: pyproject.toml
src/apps/core/: apps.py
src/apps/core/admin/: __init__.py  geo_admin.py  user_admin.py
src/apps/core/api/: api_test_helpers.py  exception_handler.py  urls.py
src/apps/core/auth_backends/: __init__.py  email_or_username.py
src/apps/core/exceptions/: api_exceptions.py  user_exceptions.py
src/apps/core/factories/: __init__.py  abstract.py  country_factories.py  helpers.py  region_factories.py  user_factories.py
src/apps/core/helpers/: __init__.py  admin_helpers.py  storage_helpers.py  views.py
src/apps/core/migrations/: 0001_initial.py  0002_user_atlas_onboarding_completed.py  0002_user_auth_provider.py  0003_user_verification_uuid.py
src/apps/core/models/: __init__.py  abstract.py  geo.py  user.py
src/apps/core/services/: affinity_calculator.py  auth_service.py
src/apps/core/tasks/: __init__.py  maintenance.py  notifications.py  reminders.py  security.py
src/apps/ideology/: apps.py  translation.py
src/apps/ideology/admin/: __init__.py  axis_answer_admin.py  completed_answer_admin.py  conditioner_answer_admin.py  ideology_abstraction_complexity_admin.py  ideology_admin.py  ideology_association_admin.py  ideology_axis_admin.py  ideology_conditioner_admin.py  ideology_definitions_admin.py  ideology_reference_admin.py  ideology_section_admin.py  ideology_tag_admin.py  religion_admin.py  tag_admin.py
src/apps/ideology/api/: urls.py
src/apps/ideology/factories/: __init__.py  axis_answer_factory.py  completed_answer_factory.py  conditioner_answer_factory.py  ideology_abstraction_complexity_factory.py  ideology_association_factory.py  ideology_axis_conditioner_factory.py  ideology_axis_definition_factory.py  ideology_axis_factory.py  ideology_conditioner_conditioner_factory.py  ideology_conditioner_definition_factory.py  ideology_conditioner_factory.py  ideology_factory.py  ideology_reference_factory.py  ideology_section_conditioner_factory.py  ideology_section_factory.py  ideology_tag_factory.py  religion_factory.py  tag_factory.py
src/apps/ideology/fixtures/: 01_complexities.json  02_sections.json  03_axes.json  04_conditioners.json  05_ideologies.json  07_conditioner_definitions.json  08_geography.json  09_religions.json  10_tags.json  11_associations.json  ideologies.json  ideology_abstraction_complexities.json  ideology_axes.json  (+4 more)
src/backend/: __init__.py  urls.py
src/backend/celery_backend/: celery.py  celery_beat_schedule.py  celery_config.py
src/backend/settings/: __init__.py  base.py  logging_config.py  security.py
(+202 files in other folders)
